--- a/KOMABA2015/asaka.tex
+++ b/KOMABA2015/asaka.tex
@@ -1,5 +1,5 @@
 
-\Chapter{トーラスのタイヒミュラー空間I (浅香 猛)}
+\Chapter{トーラスのタイヒミュラー空間I (浅香)}
 
 
 \Section{序}
@@ -185,7 +185,7 @@ $\Leftrightarrow \ s=\dfrac {at+b} {ct+d}$をみたす整数 $a$, $b$, $c$, $d$ 
 \includegraphics[width=5cm]{asaka14.png}\\
 でもよい．この輪のかけ方を生み出す元のものを``基本群の標準生成系''と呼ぶことにする．トーラスを一つ選び，さらにその``基本群の標準生成系''をひとつ選ぶことにする．このトーラスと``基本群の標準生成系''のペアを考える．トーラス全体はどのようなものか，前の章で見た．このトーラス一つ一つに標準生成系とのペアを考えることで種類を増やす．トーラスに標準生成系つけた印をマーキングと呼ぶ．
 
-もう一度tの動く範囲を上半平面として考える．上半平面上のそれぞれ別の場所に $t$, $s$ がいても，前の章で言った条件「$s=\dfrac {at+b} {ct+d}$をみたす整数 $a$, $b$, $c$, $d$ が存在して，$ad-bc=1$となる」を満たせばそこからつくられるトーラスは双正則同値になるのだった．ここで$0$と$1$を結ぶ線分（直線でもよい），$1$と$t$を結ぶ線分（直線でもよい）に注目すると，これらの線分（直線）はトーラス上で，``基本群の標準生成系''となっている．$s$のトーラスについても同じことを考えると``基本群の標準生成系''が得られる．この$2$つのトーラスは「$s=\dfrac {at+b} {ct+d}$をみたす整数 $a$, $b$, $c$, $d$ が存在して，$ad-bc=1$となる」を満たせば，双正則同値になるのだった．つまり，双正則な変換によって$t$のトーラスは$s$のトーラスに変形する．しかし``基本群の標準生成系''はどうかというと，証明は省くが，同じになる（$t$のトーラスを$s$のトーラスでうつす変換によって$t$の``基本群の標準生成系''をうつしたものが，トーラス上を動かすことで$s$の``基本群の標準生成系''に一致させられる）とは限らないのだ．今回は，双正則同値になるだけでなく``基本群の生成元''も含めて一致するものを同じとみなす厳しい見方を採用する．\\
+もう一度tの動く範囲を上半平面として考える．上半平面上のそれぞれ別の場所に $t$, $s$ がいても，前の章で言った条件「$s=\dfrac {at+b} {ct+d}$をみたす整数 $a$, $b$, $c$, $d$ が存在して，$ad-bc=1$となる」を満たせばそこからつくられるトーラスは双正則同値になるのだった．ここで$0$と$1$を結ぶ線分（直線でもよい），$1$と$t$を結ぶ線分（直線でもよい）に注目すると，これらの線分（直線）はトーラス上で，``基本群の標準生成系''となっている．$s$のトーラスについても同じことを考えると``基本群の標準生成系''が得られる．この$2$つのトーラスは「$s=\dfrac {at+b} {ct+d}$をみたす整数 $a$, $b$, $c$, $d$ が存在して，$ad-bc=1$となる」を満たせば，双正則同値になるのだった．つまり，双正則な変換によって$t$のトーラスは$s$のトーラスに変形する．しかし``基本群の標準生成系''はどうかというと，証明は省くが，同じになる（$t$のトーラスを$s$のトーラスでうつす変換によって$t$の``基本群の標準生成系''をうつしたものが，トーラス上を動かすことで$s$の``基本群の標準生成系''に一致させられる）とは限らないのだ．今回は，双正則同値になるだけでなく``基本群の標準生成系''も含めて一致するものを同じとみなす厳しい見方を採用する．\\
 %\begin{figure}[h]
 \begin{minipage}{0.5\hsize}
 \includegraphics[width=5cm]{asaka12.png}\\
@@ -195,7 +195,7 @@ $\Leftrightarrow \ s=\dfrac {at+b} {ct+d}$をみたす整数 $a$, $b$, $c$, $d$ 
 \end{minipage}
 %\end{figure}
 
-例えば形は双正則同値でも，次のように左の基本群の生成元が右の基本群の生成元に写ってしまうような写像はだめなのである．
+例えば形は双正則同値でも，次のように左の基本群の標準生成系が右の基本群の標準生成系に写ってしまうような写像はだめなのである．
 %\newpage
 
 次の事実がある．
