LaTeXの書き方を微修正

--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -53,7 +53,7 @@ $A,B$を$C^*$-環とする．写像$\pi:A \rightarrow B$が
 をみたすとき，$\pi$は \textgt{*-準同型}であるという．$\pi $が全単射 *-準同型であるとき，$\pi$は同型であるという．$C^*$-環 $A$, $B$ の間に同型$\pi$が存在するとき，$A$, $B$ は\textgt{同型}であるといい，$A\simeq B$と表す．
 \Subsection{$C^*$-環の直和}
 $\{A_{\lambda}\}_{\lambda \in \Lambda}$を$C^*$-環の族とする．これに対し，集合$A$を
-\[A=\{ \left( x_{\lambda}\right)_{\lambda \in \Lambda}|\forall x_{\lambda}\in \Lambda ,
+\[A=\{ \left( x_{\lambda}\right)_{\lambda \in \Lambda}\mid\forall x_{\lambda}\in \Lambda ,
 \sup_{\lambda \in \Lambda}\lVert x_{\lambda}\rVert <\infty  \}\]
 で定める．$A$に和と積，スカラー倍，及びノルムを
 \begin{itemize}
@@ -73,7 +73,7 @@ $\Omega$を局所コンパクト空間とする．$C_{\infty}\left( \Omega\right
 \item $\left(\lambda x+\mu y\right)\left(\omega\right)=\lambda x\left(\omega\right)+\mu y\left(\omega\right)$
 \item $\left(xy\right)\left(\omega\right)=x\left(\omega\right)y\left(\omega\right)$
 \item $x^*\left(\omega\right)=\overline{x\left(\omega\right)}$
-\item $\lVert x\rVert=\sup\{|x\left(\omega\right)||\omega \in \Omega\}$
+\item $\lVert x\rVert=\sup\{|x\left(\omega\right)|\mid\omega \in \Omega\}$
 \end{itemize}
 で定めると，$C_{\infty}(\Omega)$は可換$C^*$-環である．$\Omega$がコンパクトであるとき，かつその時に限り$C_{\infty}(\Omega)$はunitalである．
 
