--- a/KOMABA2015/ito.tex
+++ b/KOMABA2015/ito.tex
@@ -538,7 +538,7 @@ $\psi \circ F \circ \phi^{-1} : \phi(U) \to \psi(V )$が $C^\infty$ 級となる
 \defx
 ユークリッド空間内の多様体のみを考えて$f:M\to N$,$M\subset\R^k,N\subset\R^l$の微分を考える．\\
 \[
-df_x = (\frac{\partial f_i}{\partial x_j}):\R^k\to\R^l
+df_x = \left(\frac{\partial f_i}{\partial x_j}\right):\R^k\to\R^l
 \]
 という行列で定める．\\
 \defb
