--- a/KOMABA2015/main.tex
+++ b/KOMABA2015/main.tex
@@ -7,7 +7,7 @@
 \usepackage{standalone}
 \usepackage{hyperref}
 \usepackage{pxjahyper}
-\usepackage{natbib} 
+%\usepackage{natbib} 
 
 %プリアンブル
 \topmargin -0.5in
@@ -173,7 +173,7 @@
 \input{kobaken4.tex}
 \input{ito}
 %\Chapter{編集後記}
-%\input{atogaki}
+\input{atogaki}
 
 \backmatter
 \end{document}
