ページ番号の左右がおかしかったので、 \documentclass の openany を openright に変更。

--- a/KOMABA2015/mainb5.tex
+++ b/KOMABA2015/mainb5.tex
@@ -1,4 +1,4 @@
-\documentclass[notombow,b5,openany,dvipdfmx]{kyouritu}
+\documentclass[notombow,b5,openright,dvipdfmx]{kyouritu}
 \def\pdffilemoddate{\relax}
 \usepackage{graphicx,color}
 \usepackage{tikz}
