「あとがき」調整。

--- a/KOMABA2015/atogaki.tex
+++ b/KOMABA2015/atogaki.tex
@@ -1,27 +1,6 @@
 \thispagestyle{empty}
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-　\\
-\vspace*{10zw}\\
+\vspace*{10zw}
+\vfill
 \begin{picture}(110,1)
 \setlength{\unitlength}{1truemm}
 \put(5,2){\Large\textbf{$e^{\pi i}sode$　Vol.3.5}}
