「あとがき」再調整

--- a/KOMABA2015/atogaki.tex
+++ b/KOMABA2015/atogaki.tex
@@ -1,6 +1,8 @@
 \thispagestyle{empty}
 \vspace*{10zw}
 \vfill
+
+\parindent=0pt
 \begin{picture}(110,1)
 \setlength{\unitlength}{1truemm}
 \put(5,2){\Large\textbf{$e^{\pi i}sode$　Vol.3.5}}
