--- a/KOMABA2015/main.tex
+++ b/KOMABA2015/main.tex
@@ -5,6 +5,7 @@
 \usepackage{makeidx,multicol}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{standalone}
+\usepackage{tocloft}
 \usepackage{hyperref}
 \usepackage{pxjahyper}
 %\usepackage{natbib} 
@@ -159,6 +160,7 @@
 \frontmatter
 \Chapter{まえがき}
 \input{maegaki}
+\clearpage % tocloft パッケージを使う場合は自分で \clearpage しないといけない
 \tableofcontents
 \mainmatter
 %\input{example}
@@ -172,6 +174,8 @@
 \input{YukiYamamoto.tex}
 \input{kobaken4.tex}
 \input{ito}
+
+\cftaddtitleline{toc}{chapter}{圏論が分かる4コマ漫画}{章間}
 
 \backmatter
 %\Chapter{編集後記}
