圏論4コマとフーリエ解析のタイトルに執筆者名を追加。また、タイトルの執筆者名のカッコを半角に統一。

--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -1,4 +1,4 @@
-\Chapter{非可換幾何の呼び声（TN）}
+\Chapter{非可換幾何の呼び声(TN)}
 \Section{はじめに}
 いきなりで申し訳ないのですが，本稿で非可換幾何学の理論を展開することはありません．タイトル詐欺もいいところですが，幾何と作用素環の間の対応を見て，そこから非可換幾何への着想を紹介いたします．
 
