--- a/KOMABA2015/mainb5.tex
+++ b/KOMABA2015/mainb5.tex
@@ -174,7 +174,7 @@
 \input{kobaken4b5.tex}
 \input{ito}
 
-\cftaddtitleline{toc}{chapter}{圏論が分かる4コマ漫画}{章間}
+\cftaddtitleline{toc}{chapter}{圏論が分かる4コマ漫画(小林)}{章間}
 
 \backmatter
 %\Chapter{編集後記}
