--- a/KOMABA2015/osawa.tex
+++ b/KOMABA2015/osawa.tex
@@ -1,4 +1,4 @@
-\Chapter{フーリエ解析 超入門}
+\Chapter{フーリエ解析 超入門(大澤)}
 \Section{はじめに}
 本日は，数学科展示ますらぼにお越しくださり，また，本冊子$e^{\pi i}sode$を手に取ってくださり，誠にありがとうございます．
 
