--- a/KOMABA2015/main.tex
+++ b/KOMABA2015/main.tex
@@ -1,4 +1,4 @@
-\documentclass[notombow,a5,openright,dvipdfmx]{kyouritu}
+\documentclass[notombow,episode,openright,dvipdfmx]{kyouritu}
 \def\pdffilemoddate{\relax}
 \usepackage{graphicx,color}
 \usepackage{tikz}
