A4版の圏論4コマの見た目を調整。

--- a/KOMABA2015/kobaken2.tex
+++ b/KOMABA2015/kobaken2.tex
@@ -1,2 +1,5 @@
+\clearpage
 \Section{圏論が分かる4コマ漫画2(小林)}
-\includegraphics[width=10.5cm]{kobaken2.png}
+\begin{center}
+\includegraphics[width=0.9\textwidth]{kobaken2.png}
+\end{center}
