--- a/KOMABA2015/kobaken3.tex
+++ b/KOMABA2015/kobaken3.tex
@@ -1,3 +1,8 @@
+\clearpage
 \Section{圏論が分かる4コマ漫画3(小林)}
-\includegraphics[width=11cm]{kobaken3.png}
-\includegraphics[width=11cm]{kobaken4.png}
+\begin{center}
+\includegraphics[width=0.9\textwidth]{kobaken3.png}
+\end{center}
+\begin{center}
+\includegraphics[width=0.9\textwidth]{kobaken4.png}
+\end{center}
