--- a/KOMABA2015/kobaken1.tex
+++ b/KOMABA2015/kobaken1.tex
@@ -1,2 +1,5 @@
+\clearpage
 \Section{圏論が分かる4コマ漫画1(小林)}
-\includegraphics[width=10.5cm]{kobaken1.png}
+\begin{center}
+\includegraphics[width=0.9\textwidth]{kobaken1.png}
+\end{center}
