--- a/KOMABA2015/kobaken4.tex
+++ b/KOMABA2015/kobaken4.tex
@@ -1,2 +1,5 @@
+\clearpage
 \Section{圏論が分かる4コマ漫画4(小林)}
-\includegraphics[width=10.5cm]{kobaken5.png}
+\begin{center}
+\includegraphics[width=0.9\textwidth]{kobaken5.png}
+\end{center}
